--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="text_color_secondary">#444444</color>
     <color name="text_color_tertiary">#999999</color>
     <color name="text_color_hint">#CCCCCC</color>
+    <color name="text_color_white">@android:color/white</color>
 
     <color name="divider">#f4f4f4</color>
 
