--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#222222</color>
-    <color name="colorPrimaryDark">#222222</color>
-    <color name="colorAccent">#61d898</color>
+    <color name="colorPrimaryDark">#FF7E14</color>
+    <color name="colorAccent">#FF931D</color>
 
     <color name="window_background_dark">#222222</color>
     <color name="window_background_white">@android:color/white</color>
