--- a/app/src/main/res/layout/activity_toning.xml
+++ b/app/src/main/res/layout/activity_toning.xml
@@ -27,6 +27,20 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="36dp"/>
+
+        <TextView
+            style="@style/TunerText"
+            android:id="@+id/txt_start"
+            android:layout_marginTop="26dp"
+            android:textStyle="bold"
+            android:background="@drawable/shape_title"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/start"/>
+
     </LinearLayout>
 
     <RelativeLayout
